--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta http-equiv="refresh" content="30">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="css/style.css">    
+    <link rel="stylesheet" type="text/css" href="main.css">    
 </head>
 
 <body>
